# mimiqlink-python

./: AUTHORS.md  LICENSE  README.md  TODO.md  pyproject.toml  setup.py
.github/workflows/: pypi.yml
mimiqlib/: mimiqlink.py
mimiqlink/: __init__.py  connection.py  handler.py  test_mimiqlink.py
mimiqlink/public/: index.html
mimiqlink/public/assets/: HelpView-aed74f7d.js  HelpView-f834b866.js  index-07679c1c.js  index-3c66e04b.css  index-52bab338.css  index-916d90da.js
src/mimiqlink/: __init__.py  abstractconnection.py  infos.py  mimiqconnection.py  planqkconnection.py  utils.py
src/mimiqlink/public/: index.html
src/mimiqlink/public/assets/: HelpView-5f099904.js  index-234ddc04.js  index-5d5ce95c.css
tests/: test_mimiqlink.py
