[tool.poetry]
name = "mimiqlink"
version = "0.7.2"
description = ""
authors = ["QPerfect <guido.masella@qperfect.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31"


[tool.poetry.group.test.dependencies]
pytest = "^8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
